--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Adopt App",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
     "Format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,6 +31,11 @@
   "devDependencies": {
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
+    "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2"
+  },
+  "dependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   }
 }
